# food-delivery

./: .env.example  .gitignore  DATABASE_CONNECTION.md  Dockerfile  README.md  deploy.sh  docker-compose.yml  extract_firebase_config.py  run-frontend.sh  seed_test_user.py  test_rating_logic.py
backend/: main.py  pyproject.toml  requirements.txt  reset_admin.py  seed_arabian.py  test_coupon_wallet.py
backend/common/: database.py  exceptions.py  jobs.py  middleware.py  models.py  responses.py  schemas.py
backend/common/utils/: firebase.py  minio_service.py  notification_service.py  scheduler.py  security.py  seed_restaurant.py  sms.py  storage.py
backend/common_auth/: controller.py  service.py
backend/core_restaurant/: billing_service.py  controller.py  service.py  table_service.py
backend/kitchen_service/: controller.py  service.py
backend/tests/: manual_live_test.py  manual_test_exceptions.py  reset_test_db.py  test_coupons.py  test_coverage_gap.py  test_filters.py  test_main.py  test_marketing.py  test_notifications.py
frontend/: pubspec.yaml
frontend/android/app/: build.gradle.kts  google-services.json
frontend/ios/Runner/: GoogleService-Info.plist  Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: firebase_options.dart  main.dart
frontend/lib/src/: app.dart
frontend/lib/src/common_widgets/: add_address_sheet.dart  base_header.dart
frontend/lib/src/config/: app_config.dart  app_theme.dart
frontend/lib/src/l10n/: app_en.arb  app_localizations.dart  (+3 more)
frontend/test/: widget_test.dart
frontend/web/: index.html
(+34 files in other folders)
